--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   window_manager: ^0.3.7
   sleek_circular_slider: ^2.0.1
   font_awesome_flutter: ^10.6.0
+  process_run: ^0.13.0
+  http: ^1.3.0
+  fl_chart: ^0.70.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
